# GNCS

./: CMakeLists.txt  LICENSE  README.md  main.cpp
Cmd/: Command.cpp  cmdExec.cpp
Comm/: Server.cpp
Comn/: bt.cpp
Docs/: Framework.md
IO/: base64.c
Includes/: Client.h  Command.h  Server.h  base64.h  bt.h  color_def.h
